--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -1,41 +1,42 @@
-@import 'config';
+@import "config";
 
 .content {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  // this overflow will conflict with navbar sticky
+  //   overflow: hidden;
 
-    .particles {
-        position: absolute;
-        width: 100vw;
-        height: 100%;
-    }
+  .particles {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    align-items: center;
-    min-height: 15vh;
-    background-color: $primary-light-color;
-    color: $font-color;
-    font-size: 1.2rem;
-    z-index: 10;
-    position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  align-items: center;
+  min-height: 15vh;
+  background-color: $primary-light-color;
+  color: $font-color;
+  font-size: 1.2rem;
+  z-index: 10;
+  position: relative;
 
-    .iconSet {
-        fill: $font-color;
+  .iconSet {
+    fill: $font-color;
 
-        .icon {
-            fill: $font-color;
-            border-radius: 20%;
-            padding: 0.2rem;
-        }
+    .icon {
+      fill: $font-color;
+      border-radius: 20%;
+      padding: 0.2rem;
     }
+  }
 }
 
 .copyright {
-    fill: $font-color;
+  fill: $font-color;
 }
