--- a/src/styles/nav.module.scss
+++ b/src/styles/nav.module.scss
@@ -1,70 +1,69 @@
-@import 'config';
-@import 'mixins';
+@import "config";
+@import "mixins";
 
 .navMain {
-    z-index: 10;
-    position: sticky;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    flex-direction: row;
-    background-color: $primary-light-color;
-    padding: 1rem;
+  z-index: 100;
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  background-color: $primary-light-color;
+  padding: 1rem;
 
-    @include mobile{
-        background-color: red;
-    }
+  @include mobile {
+    background-color: red;
+  }
 
-    @include medium {
-        background-color: green;
-    }
+  @include medium {
+    background-color: green;
+  }
 
-    @include desktop {
-    }
+  @include desktop {
+  }
 }
 
 .navItems {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 75%;
+  background-color: transparent;
+  color: $font-color;
+
+  @include mobile {
+    width: 100%;
+  }
+
+  .navLogo {
+    font-size: 2rem;
+    padding: 1rem auto;
+    font-family: $font-heading-stack;
+    letter-spacing: 0.4rem;
+  }
+
+  .navLinks {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    width: 75%;
-    background-color: transparent;
-    color: $font-color;
+    list-style: none;
 
-    @include mobile{
-        width: 100%;
+    .navLink {
+      color: $font-color;
+      padding: 0.5rem;
+      margin: 1rem;
+      transition: ease-in-out 200ms;
+      background: none;
+      border: none;
     }
 
-
-    .navLogo {
-        font-size: 2rem;
-        padding: 1rem auto;
-        font-family: $font-heading-stack;
-        letter-spacing: 0.4rem;
+    .navLink:hover {
+      // padding: 0.5rem;
+      border-bottom: 2px solid $hue-color;
+      color: $hue-color;
+      // border: 3px solid $secondary-color;
     }
-
-    .navLinks {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        list-style: none;
-
-        .navLink {
-            color: $font-color;
-            padding: 0.5rem;
-            margin: 1rem;
-            transition: ease-in-out 200ms;
-        }
-
-        .navLink:hover {
-            // padding: 0.5rem;
-            border-bottom: 2px solid $secondary-color;
-            color: $secondary-color;
-            // border: 3px solid $secondary-color;
-            
-        }
-    }
+  }
 }
-
